Fix logo jumping around between zooms and increase logo size

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -298,8 +298,8 @@ a {
  * Logo in nav bar can't be big
  */
 .gn-logo {
-  max-height: 24px;
-  margin: -12px 0px 0px 0px;
+  max-height: 36px;
+  vertical-align: top;
   @media (max-width: @screen-md-max) {
     margin-top: -6px;
   }
